@@ -20,7 +20,7 @@
           <kind>tk_string</kind>
         </type>
         <value>
-          <string>create_Throughput_Throughput_Connector_Impl</string>
+          <string>create_Throughput_ThroughputTestConn_DDS_Event_Impl</string>
         </value>
       </value>
     </execParameter>
@@ -31,7 +31,7 @@
           <kind>tk_string</kind>
         </type>
         <value>
-          <string>create_Throughput_Throughput_Connector_Servant</string>
+          <string>create_Throughput_ThroughputTestConn_DDS_Event_Servant</string>
         </value>
       </value>
     </execParameter>
@@ -72,7 +72,7 @@
           <kind>tk_string</kind>
         </type>
         <value>
-          <string>create_Throughput_Throughput_Sec_Connector_Impl</string>
+          <string>create_Throughput_ThroughputCommandConn_DDS_Event_Impl</string>
         </value>
       </value>
     </execParameter>
@@ -83,7 +83,7 @@
           <kind>tk_string</kind>
         </type>
         <value>
-          <string>create_Throughput_Throughput_Sec_Connector_Servant</string>
+          <string>create_Throughput_ThroughputCommandConn_DDS_Event_Servant</string>
         </value>
       </value>
     </execParameter>
