@@ -71,7 +71,7 @@
           <kind>tk_string</kind>
         </type>
         <value>
-          <string>create_Throughput_Throughput_Connector_Impl</string>
+          <string>create_Throughput_ThroughputTestConn_DDS_Event_Impl</string>
         </value>
       </value>
     </execParameter>
@@ -82,7 +82,7 @@
           <kind>tk_string</kind>
         </type>
         <value>
-          <string>create_Throughput_Throughput_Connector_Servant</string>
+          <string>create_Throughput_ThroughputTestConn_DDS_Event_Servant</string>
         </value>
       </value>
     </execParameter>
@@ -123,7 +123,7 @@
           <kind>tk_string</kind>
         </type>
         <value>
-          <string>create_Throughput_Throughput_Sec_Connector_Impl</string>
+          <string>create_Throughput_ThroughputCommandConn_DDS_Event_Impl</string>
         </value>
       </value>
     </execParameter>
@@ -134,7 +134,7 @@
           <kind>tk_string</kind>
         </type>
         <value>
-          <string>create_Throughput_Throughput_Sec_Connector_Servant</string>
+          <string>create_Throughput_ThroughputCommandConn_DDS_Event_Servant</string>
         </value>
       </value>
     </execParameter>
